# LAB

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LinearAlgebra.sln  README.md
.github/workflows/: CMakePresets.json  ci.yml
LAB/: Camera.h  CameraCSRuntime.h  CoordinateSystem_Iteration_Helper.h  CoordinateSystems.h  Debugging.h  IntVector.h  Matrix.h  Quaternion.h  SupportingMath.h  Transform.h  Vector.h  Vector2.h  Vector3.h  Vector4d.h  Vector4f.h  qt_sine_table.h
LAB/HelperFunctions/: DXFunctions.h
LAB/Matrix/: Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  MatrixTxT.h
LAB/Support/: Generic.h  Simple.h  Sqrt.h  Trig.h
LAB/Vector/: Hash.h  IntVector.h  Vector2.h  Vector3.h  Vector4SIMD.h  Vector4d.h  Vector4f.h  VectorTemplate.h
LinearAlgebra/: LinearAlgebra.vcxproj  Matrix.h  SupportingMath.h  Vector.h  main.cpp
examples/: CMakeLists.txt  LinearAlgebraExample-debug  main.cpp
include/: BiggerFunctions.h  Camera.h  CoordinateSystems.h  Debugging.h  Matrix.h  SupportingMath.h  Transform.h  Vector.h  qt_sine_table.h
include/LAB/: SupportingMath.h
src/: SupportingMath.cpp  main.cpp
